# arxiv-autosumm

./: .dockerignore  .gitignore  LICENSE  README.md  README.zh-CN.md  USAGE.md  config.advanced.yaml  config.basic.yaml  config.yaml  docker-compose.yml  example_config.yaml  project_roadmap.md  pyproject.toml  requirements.txt
.github/scripts/: create-config.sh  export-env.sh
.github/workflows/: docker-build.yml  main.yml
autosumm/: cli.py  config.py  initialize.py  main.py  test.py  validate.py
autosumm/pipeline/: __init__.py  cache.py  client.py  deliver.py  fetch.py  parse.py  rate.py  render.py  summarize.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
prompts/caption_vlm/: system.txt  user.txt
prompts/parse_vlm/: system.md  user.txt
prompts/rate_emb/: query.md
prompts/rate_lm/: system.txt  user.md
prompts/summ_lm/: system.md  user.md  user.txt
scripts/: autosumm.sh
