[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autosumm"
version = "0.1.0"
description = "A pipeline for fetching and summarizing academic papers."
authors = [
  { name="Mtrya", email="kaupane20@yeah.net" },
]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "arxiv>=2.2.0",
    "json_repair>=0.47.1",
    "pydantic>=2.11.7",
    "numpy>=2.3.0",
    "PyMuPDF>=1.26.1",
    "PyPDF2>=3.0.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "python-dotenv>=0.9.9",
    "typer>=0.12.3",
    "pymarkdownlnt>=0.9.31",
]

[project.scripts]
autosumm = "autosumm.cli:app"

[tool.setuptools]
packages = ["autosumm"]

[project.urls]
Homepage = "https://github.com/Mtrya/arxiv-autosumm"
Issues = "https://github.com/Mtrya/arxiv-autosumm/issues"